# slow.iam

./: .dockerignore  .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements-cpu.txt  requirements-dev.txt  requirements-extra.txt  requirements.txt  slow.iam.dockerfile
ihelp/: config.py  helpers.py  media.py
iklssfr/: datasets.py  helpers.py  run.py  train.py  transforms.py
ireqs/: cut.py  db.py  index.py  main.py  processors.py  query.py
ireqs/detect/: __init__.py  detect.py  face.py  features.py
toolz/: cecropper.sh  ddg.py  img_cropper.py  o34.py  qc.py  vthmbs.sh
