[project]
name = "slow.iam"
version = "0.0.1"
requires-python = ">= 3.13"

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 120
multi_line_output = 3

[tool.black]
line-length = 120
target-version = ['py312']

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true